--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "animate.css": "~3.4.0",
     "bootstrap-sass-official": "~3.3.4",
     "components-font-awesome": "~4.4.0",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "pct-moment": "~0.0.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.5"
