--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular-animate": "~1.4.5",
     "angular-cookies": "~1.4.5",
     "angular-messages": "~1.4.5",
+    "angular-resource": "~1.4.5",
     "angular-sanitize": "~1.4.5",
     "angular-strap": "~2.3.1",
     "angular-toastr": "~1.4.1",
